--- a/ReastEstateWebApp/ReastEstateWebApp.csproj
+++ b/ReastEstateWebApp/ReastEstateWebApp.csproj
@@ -27,4 +27,9 @@
     <Folder Include="Pages\Properties" />
   </ItemGroup>
 
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Areas\Identity\Pages\_ValidationScriptsPartial.cshtml" />
+    <_ContentIncludedByDefault Remove="Areas\Identity\Pages\_ViewStart.cshtml" />
+  </ItemGroup>
+
 </Project>
