--- a/ReastEstateWebApp/Properties/launchSettings.json
+++ b/ReastEstateWebApp/Properties/launchSettings.json
@@ -15,7 +15,8 @@
       "applicationUrl": "https://localhost:7111;http://localhost:5207",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "hotReloadEnabled" : true
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -23,6 +24,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "LiveReload": {
+      "LiveReloadEnabled": true,
+      "ClientFileExtensions": ".cshtml,.css,.js,.htm,.html,.ts,.razor,.custom",
+      "ServerRefreshTimeout": 3000,
+      "WebSocketUrl": "/__livereload",
+      "WebSocketHost": "ws://localhost:5000",
+      "FolderToMonitor": "~/"
     }
   }
 }
