--- a/ReastEstateWebApp/ReastEstateWebApp.csproj
+++ b/ReastEstateWebApp/ReastEstateWebApp.csproj
@@ -20,11 +20,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.11" />
+    <PackageReference Include="Westwind.AspNetCore.LiveReload" Version="0.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Pages\Agents" />
-    <Folder Include="Pages\Properties" />
   </ItemGroup>
 
   <ItemGroup>
