add sale and client table add different layout for user and admin when user click on button 'send request', sale table will be populated with data on register, users will be created with type 'user' admin will be able to edit sales and clients

--- a/ReastEstateWebApp/ReastEstateWebApp.csproj
+++ b/ReastEstateWebApp/ReastEstateWebApp.csproj
@@ -25,6 +25,8 @@
 
   <ItemGroup>
     <Folder Include="Pages\Agents" />
+    <Folder Include="Pages\Clients" />
+    <Folder Include="Pages\Sales" />
   </ItemGroup>
 
   <ItemGroup>
